# getBooks

./: CLAUDE.md  Quarry.py  README.md  getBooks.py  patchnotes.md  pyproject.toml  roadmap.md  run_tests.sh  spec.md  test_queries.sh
src/cquarry/: cli.py  config.py  db.py  helpers.py  tui.py
src/cquarry/modes/: audit.py  catalog.py  export.py  stats.py  tags.py
tests/: test_search.py
